force-app/main/default/objects/Dispute_Reason_and_Flwup_Question__mdt/Dispute_Reason_and_Flwup_Question__mdt.object-meta.xml
<CustomObject>
    <label>Dispute Reason and Flwup Question</label>
    <pluralLabel>Dispute Reason and Flwup Questions</pluralLabel>
</CustomObject>