force-app/main/default/objects/Dispute_Reason_and_Flwup_Question__mdt/fields/Dispute_Detail_Answer__c.field-meta.xml
<CustomField>
    <fullName>Dispute_Detail_Answer__c</fullName>
    <label>Dispute Detail Answer</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>