force-app/main/default/objects/Dispute_Reason_and_Flwup_Question__mdt/fields/Dispute_Reason__c.field-meta.xml
<CustomField>
    <fullName>Dispute_Reason__c</fullName>
    <label>Dispute Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>