force-app/main/default/objects/Dispute_Reason_and_Flwup_Question__mdt/fields/Followup_Question__c.field-meta.xml
<CustomField>
    <fullName>Followup_Question__c</fullName>
    <label>Followup Question</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>