force-app/main/default/objects/Dispute_Reason_and_Flwup_Question__mdt/fields/ReasonCode__c.field-meta.xml
<CustomField>
    <fullName>ReasonCode__c</fullName>
    <label>ReasonCode</label>
    <length>10</length>
    <type>Text</type>
</CustomField>